fix search field in Ecommerce => Products is not centered

--- a/plugins/CoreHome/stylesheets/zen-mode.less
+++ b/plugins/CoreHome/stylesheets/zen-mode.less
@@ -80,6 +80,9 @@
     display: none;
   }
 
+  div[data-report="Goals.getItemsSku"] > .dataTableWrapper,
+  div[data-report="Goals.getItemsName"] > .dataTableWrapper,
+  div[data-report="Goals.getItemsCategory"] > .dataTableWrapper,
   div[data-report="Referrers.getReferrerType"] > .dataTableWrapper,
   div[data-report="Referrers.getAll"] > .dataTableWrapper {
     width: 800px;
